# ChemBalancer

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yaml
docs/source/: conf.py
notebooks/: Introduction.txt  README.md  Report_text.ipynb  notebook.ipynb  report.md  text_report
src/: ChemBalancerInterface.py
src/chembalancer/: Chem.py  ChemBalancerInterface.py  __init__.py  chembalancer.py  example_module.py  help.py  tout le texte.py
tests/: test_balance_chemical_equation.py  test_compound_state.py  test_count_atoms.py  test_create_reaction_string.py  test_display_reaction.py  test_display_svg.py  test_enthalpy.py  test_entropy.py  test_example_module.py  test_get_molecular_formula.py  test_get_smiles_from_name.py  test_setup_matrix.py  test_solve_ilp.py
